[project]
name = "pythonproject15"
version = "0.1.0"
description = ""
authors = [
    {name = "Aian Kharitonov",email = "kharitonovayan2018@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mypy = "^1.14.1"
black = "^24.10.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"

